[metadata]
name = Website-Generator
version = 0.1
description = Website Scraper and Generator
long_description = Application that scrapes webites and used that collected data to make new sites
url = https://github.com/Lecherouscthulhu/Website-Generator
author = Ian Mizer
author_email = HasturDev@gmail.com
license = MIT 
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Webscraping

[options]
include_package_data = true
packages = find: